#Resolved issue with color contrast, image alt, main landmark

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ header nav {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-/*
+
 .header div ul {
     list-style-type: none;
 }
@@ -42,7 +42,7 @@ header nav {
     display: inline-block;
     margin-left: 25px;
 }
-*/
+
 a {
     color: #ffffff;
     text-decoration: none;
@@ -85,7 +85,8 @@ p {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+   /* background-color: #2589bd;*/
+   background-color: #0072bb;
 }
 
 .benefit-lead {
